--- a/package.json
+++ b/package.json
@@ -3,11 +3,22 @@
   "version": "0.0.0",
   "description": "Archive and Entry facade management for data transfer and application",
   "main": "source/index.js",
+  "scripts": {
+    "format": "prettier --write '{source,test}/**/*.js'",
+    "precommit": "lint-staged",
+    "test": "run-s test:all test:format",
+    "test:all": "nyc mocha -r test/index.js 'test/**/*.spec.js'",
+    "test:format": "prettier-check '{source,test}/**/*.js'",
+    "test:unit": "mocha -r test/index.js 'test/unit/**/*.spec.js'"
+  },
+  "lint-staged": {
+    "{source,test}/**/*.js": [
+      "prettier --write",
+      "git add"
+    ]
+  },
   "directories": {
     "test": "test"
-  },
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
@@ -25,6 +36,15 @@
   },
   "homepage": "https://github.com/buttercup/facades#readme",
   "devDependencies": {
-    "buttercup": "^2.4.0"
+    "buttercup": "^2.4.0",
+    "chai": "^4.1.2",
+    "husky": "^0.14.3",
+    "lint-staged": "^7.2.2",
+    "mocha": "^5.2.0",
+    "npm-run-all": "^4.1.3",
+    "nyc": "^12.0.2",
+    "prettier": "^1.14.2",
+    "prettier-check": "^2.0.0",
+    "sinon": "^6.1.5"
   }
 }
