--- a/package.json
+++ b/package.json
@@ -41,20 +41,21 @@
   },
   "homepage": "https://github.com/buttercup/facades#readme",
   "peerDependencies": {
-    "buttercup": ">= 2.13.0"
+    "buttercup": ">= 3.0.0-rc2.1"
   },
   "devDependencies": {
-    "buttercup": "^2.16.1",
+    "@buttercup/app-env": "^0.1.1",
+    "buttercup": "3.0.0-rc2.1",
     "chai": "^4.2.0",
-    "husky": "^3.1.0",
+    "husky": "^4.0.9",
     "jsdoc-to-markdown": "^5.0.3",
     "lint-staged": "^9.5.0",
-    "mocha": "^6.2.2",
+    "mocha": "^7.0.0",
     "npm-run-all": "^4.1.5",
-    "nyc": "^14.1.1",
+    "nyc": "^15.0.0",
     "prettier": "^1.19.1",
     "prettier-check": "^2.0.0",
-    "sinon": "^8.0.0"
+    "sinon": "^8.0.4"
   },
   "husky": {
     "hooks": {
